--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.95",
     "@mui/material": "^5.10.1",
     "@mui/system": "^5.10.1",
@@ -48,8 +49,8 @@
     ]
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^8.5.6",
     "@types/jest": "^27.5.2",
+    "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^16.11.49",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
