--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "jsonwebtoken": "^8.5.1",
+    "msw": "^0.44.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
@@ -68,5 +69,8 @@
     "postcss": "^8.4.16",
     "stylelint-config-recommended": "^9.0.0",
     "tailwindcss": "^3.1.8"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
