--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "crypto-browserify": "^3.12.0",
     "jsonwebtoken": "^8.5.1",
     "msw": "^0.44.2",
     "react": "^18.2.0",
@@ -21,7 +22,8 @@
     "react-hook-form": "^7.34.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "5.3.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "stream": "^0.0.2",
     "typescript": "*",
     "web-vitals": "^2.1.4"
   },
@@ -48,6 +50,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "//": "See https://github.com/facebook/create-react-app/issues/11773",
+    "react-error-overlay": "6.0.9"
   },
   "devDependencies": {
     "@types/jest": "^27.5.2",
