--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "crypto-browserify": "^3.12.0",
+    "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
     "msw": "^0.44.2",
     "react": "^18.2.0",
@@ -57,6 +58,7 @@
   },
   "devDependencies": {
     "@types/jest": "^27.5.2",
+    "@types/jquery": "^3.5.14",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^16.11.49",
     "@types/react": "^18.0.17",
